# swiftyswiftvim

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  APIIntegrationTests.cpp  CMakeLists.txt  Driver.cpp  HTTPServerMain.cpp  Logging.cpp  Logging.hpp  Makefile  PythonExtensions.cpp  README.md  SemanticHTTPServer.cpp  SemanticHTTPServer.hpp  SwiftCompleter  SwiftCompleter.cpp  SwiftCompleter.h  SwiftCompleter.hpp  UnitTests.cpp  bootstrap  build.sh  build_boost.sh  configure  file_body.hpp  format.sh  hello.cpp  hello.py  http_server.cpp  install_brew_boost_if_needed.sh  notes.txt  repoinit.sh  req.sh  requesthandlers.py  run.sh  sema_task.cpp  ssvi_http_server.cpp  ssvi_http_server.hpp  ssvim_http_server.cpp  (+3 more)
Examples/: some_swift.swift
IntegrationTestResponses/: cursorinfo.json
utils/: update_boost.sh
